app/assets/stylesheets/externals/antd-dark.less
.dark-theme {
  @import '~antd/dist/antd.dark.less';

  body {
    color: #fff;
  }

  h1, h2, h3, h4, h5, h6 {
    color: #fff;
  }

  a {
    color: var(--blue-color-light);

    &:hover {
      color: var(--blue-color);
    }
  }

  // Fix wrong flex direction of main layout.
  .ant-layout.ant-layout-has-sider {
    flex-direction: row;
  }

  // Change selected menu item background color.
  .ant-menu:not(.ant-menu-horizontal) .ant-menu-item-selected {
    background-color: #1c1c1c;
  }

  // Change select item background color.
  .ant-select-item-option-active:not(.ant-select-item-option-disabled) {
    background-color: #2a2a2a;
  }

  .ant-select-item-option-selected:not(.ant-select-item-option-disabled) {
    color: rgba(151, 151, 151, 0.65);
    background-color: #2a2a2a;
  }

  // Set content area background.
  .ant-layout {
    background: #141414;
  }

  // Remove white hover background of empty tables.
  .ant-table-tbody > tr.ant-table-placeholder:hover > td {
    background: transparent;
  }

  tr.ant-table-expanded-row > td, tr.ant-table-expanded-row:hover > td {
    background: none;
  }

  // Remove right padding of search input field icon.
  .ant-input-search:not(.ant-input-search-enter-button) {
    padding-right: 0;
  }

  // Fix hidden alert descriptions.
  .ant-alert-description {
    display: block;
  }

  .ant-alert-with-description .ant-alert-message {
    color: inherit;
  }

  // Remove background color of collapse component.
  .ant-collapse-borderless {
    background-color: transparent;
  }

  .ant-collapse-borderless > .ant-collapse-item {
    border-bottom-color: var(--border-color);
  }

  // Remove white background of sortable table columns.
  td.ant-table-column-sort {
    background: none;
  }

  // Fix arrow color.
  .ant-popover-arrow {
    border-color: #1f1f1f !important;
  }

  // Sidebar collapse trigger styling.
  .ant-layout-sider-trigger {
    background: #141414;
    border-right: 1px solid var(--border-color);

    &:hover, &:active {
      color: var(--blue-color);
    }
  }

  .ant-layout-sider-collapsed {
    .ant-layout-sider-trigger {
      background: #1c1c1c;
      color: var(--blue-color);
    }
  }

  // Fix collapse header color.
  .ant-collapse > .ant-collapse-item > .ant-collapse-header {
    color: #fff;
  }

  // Fix progress bar status icon on the next line.
  .ant-progress-show-info .ant-progress-outer {
    margin-right: calc(-2em - 8px);
    padding-right: calc(2em + 8px);
  }

  // Adjus list items separator.
  .ant-list-split .ant-list-item {
    border-bottom: 1px solid var(--border-color);

    &:last-child {
      border-bottom: none;
    }
  }

  // Fix disabled select color.
  .ant-select-disabled.ant-select-single:not(.ant-select-customize-input) .ant-select-selector {
    background: none;
    color: #434343;
  }

  // Fix tree hover and selected elements.
  .ant-tree .ant-tree-node-content-wrapper:hover,
  .ant-tree .ant-tree-node-content-wrapper.ant-tree-node-selected {
    background: #1f1f1f;
  }

  .ant-typography code {
    background: #303030;
  }

  // Fix tabs design.
  .ant-tabs.ant-tabs-card .ant-tabs-card-bar .ant-tabs-tab-active {
    background: transparent;
    border-color: var(--border-color);
    color: #fff;
  }

  // Fix divider styling.
  .ant-divider-horizontal.ant-divider-with-text {
    color: #777;
  }

  .ant-divider-horizontal.ant-divider-with-text::before, .ant-divider-horizontal.ant-divider-with-text::after {
    border-color: var(--border-color);
  }

  .ant-progress-success-bg, .ant-progress-bg {
    background: var(--blue-color);
  }

  // Fix checkbox in table header not centered.
  table tr th.ant-table-selection-column, table tr td.ant-table-selection-column {
    text-align: center;
  }

  // Fix input color
  .ant-input-affix-wrapper:hover, .ant-input:hover {
    border-color: var(--blue-color-light);
  }

  .ant-input-affix-wrapper:focus, .ant-input-affix-wrapper-focused, .ant-input:focus, .ant-input-focused {
    border-color: var(--blue-color);
  }

  // Fix checkbox color
  .ant-checkbox-wrapper:hover .ant-checkbox-inner,
  .ant-checkbox:hover .ant-checkbox-inner,
  .ant-checkbox-input:focus + .ant-checkbox-inner {
    border-color: var(--blue-color);
  }

  .ant-checkbox-checked .ant-checkbox-inner {
    background: var(--blue-color);
    border-color: var(--blue-color);
  }

  .ant-checkbox-checked::after {
    border-color: var(--blue-color);
  }

  // Fix copy icon
  .ant-typography-expand:not(.ant-typography-copy-success),
  .ant-typography-edit:not(.ant-typography-copy-success),
  .ant-typography-copy:not(.ant-typography-copy-success) {
    color: var(--blue-color-light);

    &:hover {
      color: var(--blue-color);
    }
  }

  // Fix timeline
  .ant-timeline-item-head-blue {
    color: var(--blue-color);
    border-color: var(--blue-color);
  }

  // Fix select
  .ant-select:not(.ant-select-disabled):hover .ant-select-selector,
  .ant-select-focused.ant-select-single:not(.ant-select-customize-input) .ant-select-selector {
    border-color: var(--blue-color);
    color: var(--blue-color);
  }

  // Fix erros
  .ant-form-item-has-error .ant-form-item-explain, .ant-form-item-has-error .ant-form-item-split {
    color: #ff4d4f;
  }

  .ant-form-item-has-error .ant-input,
  .ant-form-item-has-error .ant-input-affix-wrapper,
  .ant-form-item-has-error .ant-input:hover,
  .ant-form-item-has-error .ant-input-group-addon,
  .ant-form-item-has-error .ant-input-affix-wrapper:hover {
    border-color: #ff4d4f;
  }

  .ant-empty-normal {
    color: rgba(255, 255, 255, 0.7);
  }

  // Fix slider
  .ant-slider-track, .ant-slider:hover .ant-slider-track {
    background: var(--blue-color);
  }

  .ant-slider-handle {
    border-color: var(--blue-color) !important;
  }

  .ant-input {
    color: #fff;
  }

  .ant-tag-checkable:not(.ant-tag-checkable-checked):hover {
    color: #fff;
  }

  .ant-tag:hover {
    opacity: 1;
  }

  .ant-pagination-item-active {
    border-color: var(--blue-color);

    a {
      color: var(--blue-color);
    }
  }

  .ant-alert-info .ant-alert-icon {
    color: var(--blue-color);
  }

  .ant-btn-dangerous {
    color: #cc3d3f;
    border-color: #cc3d3f;
  }

  .ant-btn-dangerous.ant-btn-primary {
    background: #cc3d3f;
    color: #fff;
    border-color: #cc3d3f;

    &:hover {
      background: #dd4345;
      border-color: #dd4345;
    }
  }

  .ant-btn-dangerous:hover,
  .ant-btn-dangerous:focus {
    color: #ff4d4f;
    border-color: #ff4d4f;
  }
}

